--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -80,6 +80,7 @@ runmain.jvmargs=
 source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
+src.java.dir=src/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
